# agents_of_agents

./: .env.example  .gitignore  A2A_ARCHITECTURE.md  CMO_AGENT_SUMMARY.md  CMO_AGENT_VERSION_HISTORY.md  CMO_AUTO_VERSIONING_GUIDE.md  CMO_USAGE_GUIDE.md  CMO_VERSION_UPDATER_GUIDE.md  CMO_X_POSTING_GUIDE.md  CONTENT_GENERATION_ITERATION.md  EXTERNAL_METRICS_GUIDE.md  FINAL_STATUS.md  FIXES_APPLIED.md  FULL_SYSTEM_GUIDE.md  HR_VALIDATION_USAGE.md  HR_WITH_POSTS_GUIDE.md  ITERATION_FLOW.md  README.md  REFACTORING_SUMMARY.md  RUN_ADK_WEB.md  SEQUENTIAL_LAYERS_README.md  TREND_PIPELINE_MIGRATION.md  VIDEO_GENERATION_GUIDE.md  WORKFLOW_GUIDE.md  agent_factory.py  auto_quote.py  content_generator.py  generate_quote_comment.py  hr_decisions_iteration_0.json  hr_input_with_actual_performance.json  last_iteration.json  oauth2_setup.py  orchestrator.py  pyproject.toml  quote_comment_generator.py  refresh_oauth2_token.py  requirements.txt  run_hr_with_auto_versioning.py  run_hr_with_posts.py  team_state_iteration_000.json  (+26 more)
archetypes/: README.md  content_creation.json  engagement.json  index.json  intelligence.json  orchestrators.json  quality_safety.json
cmo_agent/: README.md  TWEET_ENGAGEMENT_TOOL.md  __init__.py  agent.py  schemas.py  sub_agents.py  tools.py  tools.py.backup  tools_version.py
cmo_agent_v0/: WEAVE_SETUP_GUIDE.md  __init__.py  schemas.py  sub_agents.py  tools.py  tools_version.py  version_metadata.json
cmo_agent_v0_20251012_120011/: agent.py  agent.py.backup  sub_agents.py  tools.py  tools_version.py  version_metadata.json  version_updater.py
(+89 files in other folders)
