[project]
name = "agents-of-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[ui]>=1.16.0",
    "google-generativeai>=0.8.5",
    "weave>=0.52.9",
]

[tool.setuptools]
packages = ["generate_image", "hr_validation_agent"]
